--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           </div>
         </div>
         <div class="creditos">
-          <p>Creado por Eloy Díaz Del Castillo <a href="#">link al portafolio</a></p>
+          <p>Creado por Eloy Díaz Del Castillo</p>
           <p>All Rights Reserved</p>
         </div>
       </div>
